--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-safe: true
-sourse: https://github.com/reelin/blog.git
-lsi: false
-pygments: true
+---
 permalink: /blog/:year/:month/:day/:title.html
+pygments: true
+markdown: rdiscount
